# Krysalis_Hand

./: .gitmodules  Abduction_Adduction_torque_Analysis.m  Bill-of-materials.xlsx  Fingers_DC_motor_testing_timed.ino  Five_Finger_DIP_concentration.m  Lead_Screw_Actual_Torque_for_Motor.m  MUJOCO_LOG.TXT  P3_ROS.csv  P3_ROS.urdf  README.md  Thumb_Motor_Torque.m  aubo_i5_hand.xml  hand.xml  requirements.txt  robotic_hand.xml  sim_aubo_i5_hand.py  sim_hand.py  wrist_torque_analysis.m
DIP_Rotation/DIP_Rotation/: DIP_Rotation.ino
Fingers_DC_motor_testing_timed/: Fingers_DC_motor_testing_timed.ino
MCP_Rotation/MCP_Rotation/: MCP_Rotation.ino
MCP_Rotation_EEPROM/: MCP_Rotation_EEPROM.ino
MCP_Rotation_EEPROM/MCP_Rotation_EEPROM/: Memory.h  (+2 more)
Move_Thumb/: Move_Thumb.ino  README.md
Move_Two_Fingers/: Move_Two_Fingers.ino  README.md
Move_Wrists/: Move_Wrists.ino  README.md
Old_Simulation/: MUJOCO_LOG.TXT  README.md
Prototype3/src/P3_ROS/: CMakeLists.txt  package.xml
Prototype3/src/P3_ROS/config/: joint_names_P3_ROS.yaml
Prototype3/src/P3_ROS/launch/: display.launch  gazebo.launch
Prototype3/src/P3_ROS/launch/rviz_config/: P3_RViz.rviz
Prototype3/src/P3_ROS/meshes/: P_PIP.STL  R_DIP.STL
Prototype3/src/P3_ROS/urdf/: I_MCP.STL  P3_ROS.urdf  P_DIP.STL
Reset_EEPROM/: Reset_EEPROM.ino
SDKClient_Linux/: Readme.md
Simulation/: requirements.txt
Thumb_CMC_Actuation/: Thumb_CMC_Actuation.ino
Wrist_1_Actuation/: Wrist_1_Actuation.ino
Wrist_2_Actuation/: Wrist_2_Actuation.ino
assets/: I_PIP.STL  P_Below_MCP.STL  P_MCP.STL
pymjcf/: aubo_i5.py  hand.py
(+206 files in other folders)
